--- a/views/header.ejs
+++ b/views/header.ejs
@@ -44,6 +44,8 @@
         .navbar-nav .nav-link:hover {
             color: #007bff;
         }
+    
+
     </style>
 </head>
 
@@ -57,7 +59,11 @@
                 <li style="display: inline-block; margin-right: 20px;"><a href="/#services" style="text-decoration: none; color: #fff;">Services</a></li>
                 <li style="display: inline-block; margin-right: 20px;"><a href="/#contact" style="text-decoration: none; color: #fff;">Contact</a></li>
                 <li style="display: inline-block; margin-right: 20px;"><a href="/customer" style="text-decoration: none; color: #fff;">View all Customers</a></li>
-                <li style="display: inline-block;"><a href="/transaction" style="text-decoration: none; color: #fff;">Transaction History</a></li>
+                <li style="display: inline-block; margin-right: 20px;"><a href="/transaction" style="text-decoration: none; color: #fff;">Transaction History</a></li>
+                <li style="display: inline-block; margin-right: 20px;"><a href="/adddetails" style="text-decoration: none; color: #fff;">Add Customer Data</a></li>
+                <li style="display: inline-block; margin-right: 20px;"><a href="#contact" style="text-decoration: none; color: #fff;">Contact</a></li>
+
+                
             </ul>
         </nav>
     </header>
