--- a/views/transaction.ejs
+++ b/views/transaction.ejs
@@ -23,7 +23,7 @@
 </head>
 
 <%- include ('header'); -%>
-<section id="customer" style="margin-top: -75px;">
+<section id="customer" style="margin-top: 0;">
     <div class="customerTable table-responsive-sm">
         <table class="table table-striped text-center table-hover">
             <thead>
@@ -47,4 +47,4 @@
         </table>
     </div>
 </section>
-<%- include ('footer'); -%>
+
