--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -1,3 +1,4 @@
+<%- include('header'); -%>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,23 +10,24 @@
     <style>
         /* Add your background wallpaper styling here */
         body {
+            margin: 0; /* Remove default margin */
             background-image: url('/assets/white.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
-        
+
         /* Remove extra space between navigation bar and table */
         section#customer {
             padding-top: 1px; /* Adjust as needed */
         }
-        
+
         /* Style for table header cells */
         table th {
             color: white;
             font-weight: bold;
         }
-        
+
         /* Style for table data cells */
         table td {
             color: white;
@@ -34,9 +36,9 @@
     </style>
 </head>
 <body>
-    <%- include('header'); -%>
+
     
-    <section id="customer" style="margin-top: -75px;">
+    <section id="customer">
         <div class="customerTable table-responsive-sm">
             <table class="table table-striped table-hover text-center">
                 <thead>
@@ -64,7 +66,5 @@
             </table>
         </div>
     </section>
-    
-    <%- include('footer'); -%>
 </body>
 </html>
