--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,9 +3,9 @@
     <div class="footer-content">
         <p>&copy; 2023 Aayush Bank</p>
         <ul style="list-style: none; padding: 0;">
-            <li style="display: inline-block; margin-right: 20px;"><a href="/privacy-policy" style="text-decoration: none; color: #fff;">Privacy Policy</a></li>
-            <li style="display: inline-block; margin-right: 20px;"><a href="/terms-of-service" style="text-decoration: none; color: #fff;">Terms of Service</a></li>
-            <li style="display: inline-block;"><a href="/contact" style="text-decoration: none; color: #fff;">Contact Us</a></li>
+            <li style="display: inline-block; margin-right: 20px;"><a href="https://www.bajajfinserv.in/privacy-policy" style="text-decoration: none; color: #fff;">Privacy Policy</a></li>
+            <li style="display: inline-block; margin-right: 20px;"><a href="https://www.lawinsider.com/dictionary/financial-terms-and-conditions#:~:text=Terms%20and%20Conditions%20means%20the%20terms%20and%20conditions%20of%20these,Special%20Conditions%20(Part%20C)." style="text-decoration: none; color: #fff;">Terms of Service</a></li>
+            <li style="display: inline-block;"><a href="https://www.linkedin.com/in/aayush-sharma-a37811201/" style="text-decoration: none; color: #fff;">Contact Aayush</a></li>
         </ul>
     </div>
 </footer>
